--- a/offlinemoney/src/main/res/navigation/nav_graph_offlinemoney.xml
+++ b/offlinemoney/src/main/res/navigation/nav_graph_offlinemoney.xml
@@ -7,44 +7,22 @@
     <fragment
         android:id="@+id/transferFragment"
         android:name="nl.tudelft.trustchain.offlinemoney.ui.TransferFragment"
-        android:label="Offline Money"
+        android:label="Transfer"
         tools:layout="@layout/activity_main_offline_money">
         <action
-            android:id="@+id/action_transferFragment_to_sendAmountFragment"
-            app:destination="@id/sendAmountFragment"
+            android:id="@+id/action_transferFragment_to_sendMoneyFragment"
+            app:destination="@id/sendMoneyFragment"
             />
     </fragment>
 
     <fragment
         android:id="@+id/sendMoneyFragment"
         android:name="nl.tudelft.trustchain.offlinemoney.ui.SendMoneyFragment"
-        android:label="Transfer"
+        android:label="SendMoneyFragment"
         tools:layout="@layout/send_money_fragment">
         <action
-            android:id="@+id/action_sendMoneyFragment_to_transferFragment"
+            android:id="@+id/action_sendMoneyFragment_to_tranferFragment"
             app:destination="@id/transferFragment"
             />
-    </fragment>
-
-    <fragment
-        android:id="@+id/sendAmountFragment"
-        android:name="nl.tudelft.trustchain.offlinemoney.ui.SendAmountFragment"
-        android:label="Transfer"
-        tools:layout="@layout/send_amount_fragment">
-        <action
-            android:id="@+id/action_sendAmountFragment_to_transferFragment"
-            app:destination="@id/transferFragment"
-            />
-        <action
-            android:id="@+id/action_sendAmountFragment_to_sendMoneyFragment"
-            app:destination="@id/sendMoneyFragment"
-            />
-    </fragment>
-
-    <fragment
-        android:id="@+id/transactionsFragment"
-        android:name="nl.tudelft.trustchain.offlinemoney.ui.TransactionsFragment"
-        android:label="Transactions"
-        tools:layout="@layout/transactions_fragment">
     </fragment>
 </navigation>
