--- a/offlinemoney/src/main/res/layout/activity_main_offline_money.xml
+++ b/offlinemoney/src/main/res/layout/activity_main_offline_money.xml
@@ -32,7 +32,7 @@
             android:id="@+id/txtOwnName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Your balance"
+            android:text="@string/your_balance"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/txtOwnPublicKey"
@@ -43,7 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="20.00"
-            android:textSize="60dp"
+            android:textSize="60sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/txtOwnName"  />
@@ -68,22 +68,23 @@
             android:padding="16dp">
 
             <TextView
-                android:id="@+id/txtIntro"
+                android:id="@+id/txt1Euro"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Get or transfer token:"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:textSize="30sp"
+                android:text="1€"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
-            <EditText
-                android:id="@+id/edtAmount"
+            <TextView
+                android:id="@+id/edt1Euro"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="0.00"
-                android:inputType="numberDecimal"
-                android:textSize="32dp"
+                android:textSize="30sp"
+                android:text=""
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/txtIntro" />
+                app:layout_constraintTop_toBottomOf="@id/txt1Euro" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnGet"
@@ -91,11 +92,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
-                android:text="Get"
+                android:text="@string/get"
                 app:icon="@drawable/ic_baseline_photo_camera_24"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/edtAmount" />
+                app:layout_constraintTop_toBottomOf="@id/edt1Euro"/>
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnSend"
@@ -103,28 +104,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
-                android:text="Send"
+                android:text="@string/send"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/btnGet" />
-
-            <TextView
-                android:id="@+id/txtPublicKey"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Your public key:"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/btnSend" />
-
-            <ImageView
-                android:id="@+id/qrPublicKey"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                app:layout_constraintDimensionRatio="H,1:1"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/txtPublicKey" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
