--- a/detoks-engine/src/main/res/layout/token_manage.xml
+++ b/detoks-engine/src/main/res/layout/token_manage.xml
@@ -17,7 +17,8 @@
             android:textStyle="bold"
             android:text="Tokens"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:id="@+id/Tokens_text"/>
         <View
             android:layout_width="fill_parent"
             android:layout_height="0.5dp"
