--- a/detoks/src/main/res/layout/fragment_transactionfreqency_test.xml
+++ b/detoks/src/main/res/layout/fragment_transactionfreqency_test.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout 
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -10,8 +10,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="Start Transactions"
-        android:onClick="startTransactions" />
+        android:onClick="startTransactions"
+        android:text="Start Transactions" />
 
     <!-- Transactions Per Second Field -->
     <TextView
@@ -21,7 +21,7 @@
         android:layout_below="@+id/start_transactions_button"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
-        android:text="0 transactions per second" />
+        android:text="0 ms" />
 
     <!-- Switch Environment Button -->
     <Button
