--- a/detoks/src/main/res/layout/fragment_test.xml
+++ b/detoks/src/main/res/layout/fragment_test.xml
@@ -46,4 +46,11 @@
         android:layout_height="wrap_content"
         android:text="DEBUG:\n" />
 
+    <Button
+        android:id="@+id/toTransacFreq"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Test Freq" />
+
+
 </LinearLayout>
