--- a/detoks/src/main/res/layout/fragment_test.xml
+++ b/detoks/src/main/res/layout/fragment_test.xml
@@ -50,7 +50,6 @@
         android:id="@+id/toTransacFreq"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Test Freq" />
-
+        android:text="test freq" />
 
 </LinearLayout>
