--- a/detoks/src/main/res/layout/fragment_transactionfreqency_test.xml
+++ b/detoks/src/main/res/layout/fragment_transactionfreqency_test.xml
@@ -1,37 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center_horizontal">
 
-    <!-- Start Transactions Button -->
-    <Button
-        android:id="@+id/start_transactions_button"
+    <!-- Top Buttons -->
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:onClick="startTransactions"
-        android:text="Start Transactions" />
+        android:orientation="horizontal">
 
-    <!-- Transactions Per Second Field -->
-    <TextView
-        android:id="@+id/transactions_per_second_field"
+        <Button
+            android:id="@+id/start_transactions_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Group Transactions" />
+
+        <Button
+            android:id="@+id/single_transactions_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Single Transactions" />
+
+    </LinearLayout>
+
+    <!-- Text Fields -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
+
+        <TextView
+            android:id="@+id/transactions_per_second_field"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0 ms"
+            android:layout_marginEnd="10dp" />
+
+        <TextView
+            android:id="@+id/single_text_field"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0 ms"
+            android:layout_marginStart="10dp" />
+
+    </LinearLayout>
+
+    <!-- Bottom Buttons -->
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/start_transactions_button"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:text="0 ms" />
+        android:orientation="horizontal"
+        android:layout_marginTop="50dp"
+        android:gravity="center">
 
-    <!-- Switch Environment Button -->
-    <Button
-        android:id="@+id/switch_environment_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="16dp"
-        android:text="Switch Environment" />
-	  android:onClick="switchEnvirmonments" />
+        <Button
+            android:id="@+id/switch_environment_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="example overlay"
+            android:layout_marginEnd="20dp" />
 
-</RelativeLayout>
+        <Button
+            android:id="@+id/toTest_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="To Test"
+            android:layout_marginStart="20dp" />
+
+    </LinearLayout>
+
+</LinearLayout>
