--- a/offlinemoney/src/main/res/layout/send_amount_fragment.xml
+++ b/offlinemoney/src/main/res/layout/send_amount_fragment.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:numberpicker="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -70,55 +71,98 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/txtTransfer" />
 
-            <TextView
-                android:id="@+id/txt1Euro"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="1€"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/txtAmount" />
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/constraint_inner"
+            <LinearLayout
+                android:id="@+id/firstEuroEdit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent">
-
-                <ImageView
-                    android:id="@+id/imgMinus"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:padding="5dp"
-                    android:src="@drawable/ic_minus"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintTop_toBottomOf="@id/txtAmount" >
 
                 <TextView
-                    android:id="@+id/txtNumbers"
+                    android:id="@+id/txt5Euro"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="0"
-                    android:textSize="24dp"
-                    android:layout_marginStart="24dp"
-                    android:textColor="@android:color/black"
-                    app:layout_constraintTop_toTopOf="@+id/imgMinus"
-                    app:layout_constraintBottom_toBottomOf="@id/imgMinus"
-                    app:layout_constraintStart_toEndOf="@+id/imgMinus"/>
+                    android:layout_height="match_parent"
+                    android:text="5€:"
+                    android:textSize="25sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"/>
 
-                <ImageView
-                    android:id="@+id/imgPlus"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginStart="24dp"
-                    android:src="@drawable/ic_plus"
-                    android:padding="5dp"
-                    app:layout_constraintStart_toEndOf="@+id/txtNumbers"
-                    app:layout_constraintTop_toTopOf="parent" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                <com.travijuu.numberpicker.library.NumberPicker
+                    android:id="@+id/number_picker_5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    numberpicker:min="0"
+                    numberpicker:max="10"
+                    numberpicker:value="5"
+                    numberpicker:unit="1"
+                    numberpicker:focusable="false"
+                    numberpicker:custom_layout = "@layout/number_picker_layout"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/secondEuroEdit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/firstEuroEdit" >
+
+                <TextView
+                    android:id="@+id/txt2Euro"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="2€:"
+                    android:textSize="25sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"/>
+
+                <com.travijuu.numberpicker.library.NumberPicker
+                    android:id="@+id/number_picker_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    numberpicker:min="0"
+                    numberpicker:max="10"
+                    numberpicker:value="5"
+                    numberpicker:unit="1"
+                    numberpicker:focusable="false"
+                    numberpicker:custom_layout = "@layout/number_picker_layout"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/thirdEuroEdit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/secondEuroEdit" >
+
+                <TextView
+                    android:id="@+id/txt1Euro"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="1€:"
+                    android:textSize="25sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"/>
+
+                <com.travijuu.numberpicker.library.NumberPicker
+                    android:id="@+id/number_picker_1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    numberpicker:min="0"
+                    numberpicker:max="10"
+                    numberpicker:value="5"
+                    numberpicker:unit="1"
+                    numberpicker:focusable="false"
+                    numberpicker:custom_layout = "@layout/number_picker_layout"/>
+
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/buttonLayout"
@@ -128,7 +172,7 @@
                 android:layout_margin="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/constraint_inner"
+                app:layout_constraintTop_toBottomOf="@id/thirdEuroEdit"
                 >
 
             <com.google.android.material.button.MaterialButton
@@ -136,7 +180,7 @@
                 style="@style/Button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
+                android:layout_margin="20dp"
                 android:text="@string/send"
                 android:layout_gravity="center"/>
 
@@ -146,7 +190,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="bottom"
-                android:layout_margin="16dp"
+                android:layout_margin="20dp"
                 android:text="@string/cancel" />
 
             </LinearLayout>
