Admin page added to UI

--- a/detoks/src/main/res/navigation/nav_graph_detoks.xml
+++ b/detoks/src/main/res/navigation/nav_graph_detoks.xml
@@ -23,7 +23,11 @@
         android:name="nl.tudelft.trustchain.detoks.WalletFragment"
         android:label="Wallet"
         tools:layout="@layout/wallet_fragment"
-        />
+        >
+        <action
+            android:id="@+id/action_walletFragment_to_adminFragment"
+            app:destination="@id/adminFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/offlineTransferFragment"
@@ -40,4 +44,8 @@
         android:name="nl.tudelft.trustchain.detoks.AddFriendFragment"
         android:label="fragment_add_friend"
         tools:layout="@layout/fragment_add_friend" />
+    <fragment
+        android:id="@+id/adminFragment"
+        android:name="nl.tudelft.trustchain.detoks.AdminFragment"
+        android:label="AdminFragment" />
 </navigation>
