--- a/detoks/src/main/res/layout/wallet_fragment.xml
+++ b/detoks/src/main/res/layout/wallet_fragment.xml
@@ -37,4 +37,12 @@
         tools:layout_editor_absoluteX="162dp"
         tools:layout_editor_absoluteY="322dp" />
 
+    <Button
+        android:text="Admin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button_admin_page"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="0dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
