--- a/detoks/src/main/res/layout/item_token_admin.xml
+++ b/detoks/src/main/res/layout/item_token_admin.xml
@@ -5,106 +5,36 @@
     android:layout_width="match_parent"
     android:layout_height="100dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.0">
+    <TextView
+        android:layout_width="263dp"
+        android:layout_height="19dp"
+        android:id="@+id/currentOwner"
+        app:layout_constraintTop_toBottomOf="@+id/latestTimestamp"
+        app:layout_constraintStart_toStartOf="@+id/latestTimestamp"
+        tools:text="Name"
+        app:layout_constraintEnd_toEndOf="@+id/latestTimestamp" />
 
-        <Button
-            android:text="History"
-            android:layout_width="90dp"
-            android:layout_height="31dp"
-            android:id="@+id/historyButton"
-            android:textSize="10dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="24dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="11dp"
-            app:layout_constraintTop_toBottomOf="@+id/currentOwner" />
-
-        <EditText
-            android:layout_width="100dp"
-            android:layout_height="43dp"
-            android:inputType="numberDecimal"
-            android:ems="10"
-            android:id="@+id/valueToken"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="24dp"
-            app:layout_constraintVertical_bias="0.508"
-            app:layout_constraintEnd_toStartOf="@+id/currentOwner"
-            android:layout_marginEnd="32dp" />
-
-        <TextView
-            android:text="23/09/2022"
-            android:layout_width="0dp"
-            android:layout_height="21dp"
-            android:id="@+id/latest_timestamp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp"
-            app:layout_constraintStart_toEndOf="@+id/valueToken"
-            android:layout_marginStart="32dp"
-            android:layout_marginEnd="24dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintBottom_toTopOf="@+id/currentOwner" />
-
-        <TextView
-            android:text="John"
-            android:layout_width="0dp"
-            android:layout_height="21dp"
-            android:id="@+id/currentOwner"
-            app:layout_constraintTop_toBottomOf="@+id/latest_timestamp"
-            app:layout_constraintStart_toStartOf="@+id/latest_timestamp"
-            android:layout_marginEnd="24dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintBottom_toTopOf="@+id/historyButton" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <EditText
-        android:layout_width="100dp"
-        android:layout_height="43dp"
-        android:inputType="numberDecimal"
-        android:ems="10"
-        android:id="@+id/valueToken"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="24dp"
-        app:layout_constraintVertical_bias="0.508"
-        app:layout_constraintEnd_toStartOf="@+id/currentOwner"
-        android:layout_marginEnd="32dp" />
+    <Button
+        android:text="History"
+        android:layout_width="90dp"
+        android:layout_height="31dp"
+        android:id="@+id/historyButton"
+        android:textSize="10dp"
+        app:layout_constraintBottom_toBottomOf="@+id/verifyButton"
+        app:layout_constraintEnd_toEndOf="@+id/currentOwner"
+        app:layout_constraintTop_toTopOf="@+id/verifyButton" />
 
     <TextView
-        android:text="23/09/2022"
         android:layout_width="0dp"
         android:layout_height="21dp"
-        android:id="@+id/latest_timestamp"
+        android:id="@+id/latestTimestamp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        tools:text="21/02/2022"
         app:layout_constraintStart_toEndOf="@+id/valueToken"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="24dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0" />
-
-    <TextView
-        android:text="John"
-        android:layout_width="0dp"
-        android:layout_height="21dp"
-        android:id="@+id/currentOwner"
-        app:layout_constraintTop_toBottomOf="@+id/latest_timestamp"
-        app:layout_constraintStart_toStartOf="@+id/latest_timestamp"
-        android:layout_marginEnd="24dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0" />
+        android:layout_marginStart="32dp" />
 
     <Button
         android:text="Verify"
@@ -112,10 +42,21 @@
         android:layout_height="31dp"
         android:id="@+id/verifyButton"
         android:textSize="10dp"
-        app:layout_constraintStart_toStartOf="@+id/currentOwner"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        android:layout_marginTop="11dp"
-        app:layout_constraintTop_toBottomOf="@+id/currentOwner" />
+        app:layout_constraintStart_toStartOf="@+id/currentOwner"
+        app:layout_constraintTop_toBottomOf="@+id/currentOwner"
+        android:layout_marginTop="16dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/valueToken"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="32dp"
+        tools:text="50"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="22sp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
