--- a/detoks/src/main/res/navigation/nav_graph_detoks.xml
+++ b/detoks/src/main/res/navigation/nav_graph_detoks.xml
@@ -27,6 +27,9 @@
         <action
             android:id="@+id/action_walletFragment_to_adminFragment"
             app:destination="@id/adminFragment" />
+        <action
+            android:id="@+id/action_walletFragment_to_tokenListAdmin"
+            app:destination="@id/tokenListAdmin" />
     </fragment>
 
     <fragment
