--- a/detoks/src/main/res/layout/fragment_token_list.xml
+++ b/detoks/src/main/res/layout/fragment_token_list.xml
@@ -46,7 +46,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/list"
+        android:id="@+id/token_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginLeft="16dp"
