--- a/detoks/src/main/res/navigation/nav_graph_detoks.xml
+++ b/detoks/src/main/res/navigation/nav_graph_detoks.xml
@@ -58,5 +58,9 @@
     <fragment
         android:id="@+id/tokenListAdmin"
         android:name="nl.tudelft.trustchain.detoks.TokenListFragment"
-        android:label="tokenListAdmin" />
+        android:label="tokenListAdmin" >
+        <argument
+            android:name="access"
+            app:argType="string" />
+    </fragment>
 </navigation>
