Revert "Add timestamp"

--- a/detoks/src/main/res/layout/fragment_profile.xml
+++ b/detoks/src/main/res/layout/fragment_profile.xml
@@ -37,6 +37,7 @@
             android:id="@+id/publicKeyLabel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="The user's public key..."
             android:textSize="15sp" />
     </LinearLayout>
 
@@ -68,6 +69,7 @@
                 android:id="@+id/numVideosLabel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="Total Number of Videos..."
                 android:textSize="15sp"
                 android:textAlignment="center" />
         </LinearLayout>
@@ -94,9 +96,7 @@
                 android:text="Total Number of Likes..."
                 android:textSize="15sp"
                 android:textAlignment="center" />
-
         </LinearLayout>
-
     </LinearLayout>
 
     <com.google.android.material.tabs.TabLayout
