--- a/detoks/src/main/res/layout/fragment_videos_list.xml
+++ b/detoks/src/main/res/layout/fragment_videos_list.xml
@@ -5,12 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".fragments.VideosListFragment">
 
-
-
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-
-    </ListView>
+        android:layout_height="match_parent" />
 </FrameLayout>
