--- a/detoks/src/main/res/layout/fragment_tab_bar.xml
+++ b/detoks/src/main/res/layout/fragment_tab_bar.xml
@@ -35,8 +35,8 @@
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:icon="@drawable/baseline_add_circle_24"
-            android:text="New Video"/>
+            android:icon="@drawable/baseline_upload_file_24"
+            android:text="Upload Video"/>
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
